# unravel

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  action.yml  alembic.ini  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pyproject.toml
.github/scripts/: update_homebrew_formula.py
.github/workflows/: ci.yml  docker.yml  release.yml  unravel.yml
alembic/: env.py
alembic/versions/: 20260511_1651_4b4e9a2d0b92_phase0_schema.py  20260511_1803_6fd55d764c78_field_edits_history.py  20260511_2022_3e92da0c_pr_source_and_comments.py  20260511_2058_ddb9aa53_users_sessions.py  20260511_2200_a1c4f7e8_pr_comments_review_id.py  20260511_2300_b8f2e1c4_pr_comments_multiline_outdated.py  20260512_1200_c5e1a2d3_walkthrough_pr_node_id.py  20260513_1000_d6f2a3b4_hunk_content_hash_and_viewed.py
fixtures/: README.md  sample-small.json  unravel-pr-9.json
homebrew-tap/: README.md
homebrew-tap/Aliases/: unravel
homebrew-tap/Formula/: unravel-review.rb  unravel.rb
src/unravel/: cache.py  cli.py  config.py  git.py  hydration.py  models.py  narrator.py  prompts.py  remote_cache.py  renderer.py
src/unravel/api/: __init__.py  db.py  db_models.py  deps.py  fixtures.py  main.py  (+1 more)
tests/: test_analyzer.py  test_cache.py  test_claude_cli.py  test_cli_pr_prompt.py  test_config.py  test_git.py  test_hydration.py  test_models.py  test_page_content.py  test_registry.py  test_remote_cache.py  test_renderer.py  test_tui_gh_client.py  test_tui_review_state.py  test_tui_review_storage.py  test_tui_state.py
tests/fixtures/: sample_response.json
(+34 files in other folders)
