[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "unravel-review"
dynamic = ["version"]
description = "AI-powered CLI that decomposes PR diffs into causal threads for human code reviewers"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
authors = [
    { name = "Rodrigo Oliveira" },
]
keywords = ["code-review", "diff", "ai", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "anthropic>=0.42.0",
    "typer>=0.15.0",
    "rich>=13.0",
    "unidiff>=0.7.5",
    "textual>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff>=0.8.0",
    "textual-dev>=1.0",
]

[project.scripts]
unravel = "unravel.cli:entrypoint"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src/unravel"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
